Added the ability to draw a path Added notifications when fetching locations In progress: Algorithm to better solve the path track Added TSMessageView

--- a/TouristHelper/Podfile
+++ b/TouristHelper/Podfile
@@ -4,6 +4,7 @@ platform :ios, '8.4'
 target 'TouristHelper' do
  pod 'TouristHelperCore', :path => '../TouristHelperCore'
  pod 'PureLayout'
+ pod 'TSMessages'
 end
 
 target 'TouristHelperTests' do
