Code refactoring and cleanup
* Added pragma marks
* Added additional logging

--- a/TouristHelperCore/TouristHelperCore/GmsInfo.plist
+++ b/TouristHelperCore/TouristHelperCore/GmsInfo.plist
@@ -9,7 +9,7 @@
 		<key>aquarium</key>
 		<true/>
 		<key>art_gallery</key>
-		<false/>
+		<true/>
 		<key>museum</key>
 		<true/>
 		<key>shopping_mall</key>
